Finish myPayments feature
