# app/routes/payment.js
@@ -2,9 +2,9 @@ const router = require("express").Router();
 const controller = require("../controllers/payment");
 
 router
-  .post("/:email", controller.createPayment)
-  .get("/:email", controller.getAllPayments)
-  .put("/:email/:id", controller.updatePayment)
-  .delete("/:email/:id", controller.deletePayment);
+  .post("/:username", controller.createPayment)
+  .get("/:username", controller.getAllPayments)
+  .put("/:id", controller.updatePayment)
+  .delete("/:id", controller.deletePayment);
 
 module.exports = router;
